TAG: goload-?
DATE: 07/27/2016
STAFF: lec 
CHANGES:
TR12345/GO-Noctua/GPAD/GPI
TR12378/isoforms are now in their own file : see config/ISOFORM
goamouse/goamouse.config.default/goamouse.py

TAG: goload-tr12349
DATE: 07/07/2016
STAFF: lec 
CHANGES: TR12349/gone-dor & more
TR12345/GO-Noctua/GPAD/GPI

TAG: goload-6-0-4-6
TAG: goload-6-0-4-5
TAG: goload-6-0-4-4
TAG: goload-6-0-4-3
TAG: goload-6-0-4-2
TAG: goload-6-0-4-1
DATE: 06/14/2016
STAFF: lec 
CHANGES: TR12349/gone-dor & more
TR12345/GO-Noctua/GPAD/GPI
1) wrapper for all go-loads
goamouse  : goaload
goahuman  : goahumanload
goarat    : goratload
goacfp    : gocfpload
goarefgen : gorefgenload