@@ -1,0 +1,41 @@
+#!/bin/sh
+#
+#  go.sh
+#
+#  See http://prodwww.informatics.jax.org/wiki/index.php/sw:Goload
+#
+#  Run daily GO loads from loadadmin/prod/dailytasks.csh
+#
+
+cd `dirname $0`
+
+if [ "${MGICONFIG}" = "" ]
+then
+    MGICONFIG=/usr/local/mgi/live/mgiconfig
+    export MGICONFIG
+fi
+
+. ${MGICONFIG}/master.config.sh
+
+GOLOG=${DATALOADSOUTPUT}/go/goload.log
+rm -rf $GOLOG
+touch $GOLOG
+ 
+date | tee -a $GOLOG
+
+echo 'runnning proisoformload...'
+${PROISOFORMLOAD}/bin/proisoform.sh | tee -a ${GOLOG}
+
+echo 'generate GPI file (gomousenoctua depends on it)...'
+REPORTOUTPUTDIR=${PUBREPORTDIR}/output;export REPORTOUTPUTDIR
+${PUBRPTS}/daily/GO_gpi.py | tee -a ${GOLOG}
+
+echo '1:running GO/Mouse/Noctua Load' | tee -a ${GOLOG}
+${GOLOAD}/gomousenoctua/gomousenoctua.sh | tee -a ${GOLOG}
+
+echo 'running go_annot_extensions_display_load.csh' | tee -a ${GOLOG}
+${MGICACHELOAD}/go_annot_extensions_display_load.csh | tee -a ${GOLOG}
+
+echo 'running go_isoforms_display_load.csh' | tee -a ${GOLOG}
+${MGICACHELOAD}/go_isoforms_display_load.csh | tee -a ${GOLOG}
+
